# tcg-scraper

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  data.csv  docker-compose.yml  grammar.pest  sqlx-data.json
.sqlx/: query-061720164c978782f27a69cd4b65415fde8f0ae5af7e7bf27df98a146b6508b1.json  query-13d513ab2c64cc97c74e2c85a2b0714b00be1989b502a85151e719f1eab3aed5.json  query-1b44b0d0831a431270202d8d17037838d0b206333a43f012b72e8d9ccae0bab1.json  query-28276db2c130bffb926b9d6ce8d84c9ad48c961cb3d249209c7a100690255594.json  query-293570e1647149c891016ccabbca63744a0845a3ccb3ac85c29463dd6ae587e5.json  query-35311fca87a611f0cea66e7185c612d5091ee96d0ead0a6be782e7469872b4c2.json  query-4a4b718714751c7e31190c2f11107b6639743c1e40bcae2504842e04397bbd04.json  query-4aa0e16bafc53cc78a11d3e54c7baadd6b4e52cde5df3f162a70aa852def2d46.json  query-4cd2c5e82016377b3a8160ec8d8572c228b82285815edc6cfe7b3420753bea05.json  query-51fefdaec375fb74b18eb9fbf300f37b813e226b3b621e67a6b18fbd6b8d175d.json  query-59d2fba37683f3e9982e6d19eaf63b50e8d45c0e4ecea403c1b4793ee4bbe76b.json  query-5d39dc8e2f14b49414e4ec66370026b37444969218922bbccbbb7fc372319565.json  query-5f9f02e0c296cac450e4b44ace0d9538b337233b462bf822193f95566a67b4ca.json  query-623c433666f8dcf7aff24030e9ad35a63eb9e4c0ffeff18fa221acf0ebdf1987.json  query-65243908fbd22c2057a3bf076b38b7bfb1ed76c05edb972ece404a36e979a769.json  query-6f5246a1ef69c662031979c0f01f94ef8e04e9694caa34ee182c65107adf48cf.json  query-726cc39606f506078c809b13c23c08b95400ebf17406fd08e4e8b4bdd7f93825.json  query-7c0582728cf121da9f4998c9065d7e8d2802cc8584d02501068f0d47dca55cf0.json  query-8991ed71fec26729e6e32e488dc8a101a60fc96515ec4aed75c216aafbdf2d68.json  query-8a931f2c88ef3d2f13f6f1451132237b6a3536041bae7ed5acdb1eafa5c3ff61.json  query-8b0469b702aa04788533df242a14675abbc4cf481deb1ead6b13c3e17a6cb68f.json  query-8e2970ed03bdb05be07d766cc99939ed6778d93ee7cfac4ac915d8722f4eee85.json  query-90a1c988d1841c9811f39f7f3a024f5b99bccf2507ad1d0fa12ff46a6cd93f0c.json  query-9373ced61698857a5b6ff81ec24195ca7183184b7e7f9583bbd124aa74893938.json  query-93a190c0dc1663323c9b3870d8dad7cc6930ad707ad1b666e4fd5387caf9985e.json  query-97d3c3fb200dd90f07a9e538b16e7d20509ba0cc5d484f10e730c622f50c9da9.json  query-98145f426885a59b037b10844004559f81cc7cb71169831192cfe32ce5840e58.json  query-9976a066999b0f07312f39ac668a72b1aaf6f5378f87a90e7d7c95639ea263ad.json  query-9a289cde20ac5224eae3fec0614942079880052c717b012369774590ff51636a.json  query-9dfabdb581328ee83e7e229c16a869b2eb8a8573d8a1a543360495bdc26705c0.json  query-9ea05f557d86bd8d3b9e5a89b0933dc0a12b6900dd9059762829dbbde722e0a2.json  query-a8f44e07dfae68e516a84a18fcf75e15844302b3ffb91cdaf48ec6c1f2960dda.json  query-ada182512b95f32f7d5cf6db6caf64add9984a3b3b099da987aec9a2d2ff8ab5.json  query-b0c30f81f997b9041d518f6b434451e8841fab133e5234aa26335397d7365929.json  query-be4185366ff7ce5c249358ea9def3895ff8df1c5902cc9fe2d394003815f2162.json  query-c456171a367cd31ff54e080822e2fce81e06bfd42967503c086866b6733d92fd.json  query-c62855235efc45dd80c9bf9e53e34df262869e23f914113e154570d09f5faebf.json  query-c8e06b69759b8e2c7c5264e845f321540b6d91fd2ae4810c2cbc0975d9e07828.json  query-d5c286afd161a63669d3f6ec39ba6fa6035489f01161e9afa67a7ad07e53833a.json  query-dcf24f0f5f02a70682f8069c12227a2d2dcb331f19ba3ec3f085fe38b0d6efe7.json  (+5 more)
migrations/: 20230802111058_initial.down.sql  20230802111058_initial.up.sql  20230806083826_yugioh.down.sql  20230806083826_yugioh.up.sql  20240318103842_one_piece.down.sql  20240318103842_one_piece.up.sql  20240411094535_op_rarity_enum.down.sql  20240411094535_op_rarity_enum.up.sql  20240414051508_ws.down.sql  20240414051508_ws.up.sql  20240414173141_ptcg_jp.down.sql  20240414173141_ptcg_jp.up.sql  20240501091148_pokewiki.down.sql  (+5 more)
(+50 files in other folders)
