[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
csv = "1.3.0"
derive_builder = "0.20.0"
dotenvy = "0.15.7"
futures = "0.3.30"
headless_chrome = { version = "1.0.9", default-features = false }
pest = "2.7.9"
pest_derive = "2.7.9"
scraper = { version = "0.19.0", features = ["atomic"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_qs = "0.13.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
strum = "0.26.2"
strum_macros = "0.26.2"
thiserror = "1.0.58"
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
html-escape = "0.2.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
fantoccini = "0.19.3"
regex = "1.10.4"
lazy_static = "1.4.0"
reqwest = "0.12.3"
uuid = { version = "1.8.0", features = ["v4"] }
